--- a/АР.tab/РД.panel/Отделка пола.pushbutton/MainWindow.xaml
+++ b/АР.tab/РД.panel/Отделка пола.pushbutton/MainWindow.xaml
@@ -7,12 +7,19 @@
         Title="Отделка пола"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Height="360" Width="600"
+        Height="360" Width="650"
         ResizeMode="NoResize">
+    <Window.Resources>
+        <TextBlock x:Key="TextToolTip"
+            Text="Если выбрана опция 'Открывание наружу', либо 'Открывание внутрь', то пол будет создаваться с заведением &#10;в дверной проем, который ведет из помещения или в помещение, в зависимости от того, что вы выбрали. &#10;Данная опция работает только для семейств в категории 'Двери', у которых заполнены внутренние свойства &#10;FromRoom и ToRoom."
+            ToolTipService.InitialShowDelay="500"
+            ToolTipService.ShowDuration="40000"
+            ToolTipService.BetweenShowDelay="1"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="6.5*"></RowDefinition>
-            <RowDefinition Height="3.5*"></RowDefinition>
+            <RowDefinition Height="7*"></RowDefinition>
+            <RowDefinition Height="3*"></RowDefinition>
         </Grid.RowDefinitions>
         <GroupBox
                 Grid.Row ="0" Grid.Column="0"
@@ -28,6 +35,7 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1.2*"/>
                     <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock
                     Grid.Row="0" Grid.Column="0"
@@ -53,6 +61,7 @@
                         Text="При заведении пола в дверные проемы на всю толщину стены заводить, если:"
                         TextWrapping="Wrap"/>
                 <ComboBox
+                    Grid.ColumnSpan="2"
                     Grid.Row="0" Grid.Column="1"
                     Margin="5 10"
                     DisplayMemberPath="Name"
@@ -60,12 +69,14 @@
                     ItemsSource="{Binding floor_types}"
                     SelectedItem="{Binding selected_floor_type}"/>
                 <TextBox
+                    Grid.ColumnSpan="2"
                     Grid.Row ="1" Grid.Column="1"
                     TextAlignment="Right"
                     VerticalContentAlignment="Center"
                     Margin="5 10"
                     Text="{Binding level_offset, FallbackValue=level_offset, UpdateSourceTrigger=PropertyChanged}"/>
                 <TextBox
+                    Grid.ColumnSpan="2"
                     Grid.Row ="2" Grid.Column="1"
                     TextAlignment="Right"
                     VerticalContentAlignment="Center"
@@ -78,14 +89,43 @@
                     VerticalContentAlignment="Center"
                     ItemsSource="{Binding door_openings}"
                     SelectedItem="{Binding selected_door_opening}"/>
+                <Rectangle
+                    Grid.Row="3" Grid.Column="2"
+                    Fill="WhiteSmoke"
+                    Stroke="Gray"
+                    Margin="0 12 5 12"
+                    RadiusX="15"
+                    RadiusY="15">
+                    <Rectangle.ToolTip>
+                        <StaticResource ResourceKey="TextToolTip"/>
+                    </Rectangle.ToolTip>
+                </Rectangle>
+                <TextBlock
+                    Grid.Row="3" Grid.Column="2"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Margin="0 12 5 12"
+                    Text="?"
+                    FontFamily="Arial"
+                    Foreground="Gray"
+                    FontSize="14">
+                    <TextBlock.ToolTip>
+                        <StaticResource ResourceKey="TextToolTip"/>
+                    </TextBlock.ToolTip>
+                </TextBlock>
+
             </Grid>
         </GroupBox>
         <Grid Grid.Row="1" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="283*"/>
+                <ColumnDefinition Width="42*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center" Margin="235,0,0,0">
                 <RadioButton Content="{Binding is_checked_selected_content, FallbackValue=is_checked_selected_content}"
                              VerticalAlignment="Center"
                              HorizontalAlignment="Left"
@@ -103,7 +143,7 @@
                              IsChecked="{Binding is_checked_on_view, FallbackValue=is_checked_on_view}">
                 </RadioButton>
             </StackPanel>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10 0">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Margin="483,0,0,0" Grid.ColumnSpan="2">
                 <TextBlock
                     Text="{Binding error_text, FallbackValue=ErrorText}"
                     Margin="5 0"
