--- a/АР.tab/РД.panel/Отделка пола.pushbutton/MainWindow.xaml
+++ b/АР.tab/РД.panel/Отделка пола.pushbutton/MainWindow.xaml
@@ -7,12 +7,19 @@
         Title="Отделка пола"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Height="250" Width="500"
+        Height="360" Width="650"
         ResizeMode="NoResize">
+    <Window.Resources>
+        <TextBlock x:Key="TextToolTip"
+            Text="Если выбрана опция 'Открывание наружу', либо 'Открывание внутрь', то пол будет создаваться с заведением &#10;в дверной проем, который ведет из помещения или в помещение, в зависимости от того, что вы выбрали. &#10;Данная опция работает только для семейств в категории 'Двери', у которых заполнены внутренние свойства &#10;FromRoom и ToRoom."
+            ToolTipService.InitialShowDelay="500"
+            ToolTipService.ShowDuration="40000"
+            ToolTipService.BetweenShowDelay="1"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="6*"></RowDefinition>
-            <RowDefinition Height="4*"></RowDefinition>
+            <RowDefinition Height="7*"></RowDefinition>
+            <RowDefinition Height="3*"></RowDefinition>
         </Grid.RowDefinitions>
         <GroupBox
                 Grid.Row ="0" Grid.Column="0"
@@ -22,10 +29,13 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1.2*"/>
                     <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="0.1*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock
                     Grid.Row="0" Grid.Column="0"
@@ -34,37 +44,102 @@
                     HorizontalAlignment="Left"
                     Text="Тип перекрытия:"/>
                 <TextBlock
-                    Grid.Row="2" Grid.Column="0"
+                    Grid.Row="1" Grid.Column="0"
                     Margin="5"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Left"
                     Text="Смещение от уровня, мм:"/>
                 <ComboBox
+                    Grid.Row="2" Grid.Column="0"
+                    Margin="5 10 10 10"
+                    VerticalContentAlignment="Center"
+                    ItemsSource="{Binding doors_contours_options}"
+                    DisplayMemberPath="name"
+                    SelectedItem="{Binding selected_door_contour_option}"/>
+                <TextBlock Grid.Row="3" Grid.Column="0"
+                        VerticalAlignment="Center"
+                           Margin="5 0 0 0 "
+                        Text="При заведении пола в дверные проемы на всю толщину стены заводить, если:"
+                        TextWrapping="Wrap"/>
+                <ComboBox
+                    Grid.ColumnSpan="2"
                     Grid.Row="0" Grid.Column="1"
-                    Margin="10"
+                    Margin="5 10"
                     DisplayMemberPath="Name"
                     VerticalContentAlignment="Center"
                     ItemsSource="{Binding floor_types}"
                     SelectedItem="{Binding selected_floor_type}"/>
                 <TextBox
+                    Grid.ColumnSpan="2"
+                    Grid.Row ="1" Grid.Column="1"
+                    TextAlignment="Right"
+                    VerticalContentAlignment="Center"
+                    Margin="5 10"
+                    Text="{Binding level_offset, FallbackValue=level_offset, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox
+                    Grid.ColumnSpan="2"
                     Grid.Row ="2" Grid.Column="1"
                     TextAlignment="Right"
                     VerticalContentAlignment="Center"
-                    Margin="10"
-                    Text="{Binding level_offset, FallbackValue=level_offset, UpdateSourceTrigger=PropertyChanged}"/>
+                    Margin="5 10"
+                    IsEnabled="{Binding is_enabled_door_contour_offset, FallbackValue=is_enabled_door_contour_offset, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding door_contour_offset, FallbackValue=door_contour_offset, UpdateSourceTrigger=PropertyChanged}"/>
+                <ComboBox
+                    Grid.Row="3" Grid.Column="1"
+                    Margin="5 10"
+                    VerticalContentAlignment="Center"
+                    ItemsSource="{Binding door_openings}"
+                    DisplayMemberPath="name"
+                    SelectedItem="{Binding selected_door_opening}"/>
+                <Rectangle
+                    Grid.Row="3" Grid.Column="2"
+                    Fill="WhiteSmoke"
+                    Stroke="Gray"
+                    Margin="0 12 5 12"
+                    RadiusX="15"
+                    RadiusY="15">
+                    <Rectangle.ToolTip>
+                        <StaticResource ResourceKey="TextToolTip"/>
+                    </Rectangle.ToolTip>
+                </Rectangle>
+                <TextBlock
+                    Grid.Row="3" Grid.Column="2"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Margin="0 12 5 12"
+                    Text="?"
+                    FontFamily="Arial"
+                    Foreground="Gray"
+                    FontSize="14">
+                    <TextBlock.ToolTip>
+                        <StaticResource ResourceKey="TextToolTip"/>
+                    </TextBlock.ToolTip>
+                </TextBlock>
+
             </Grid>
         </GroupBox>
         <Grid Grid.Row="1" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="283*"/>
+
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <RadioButton Content="{Binding is_checked_selected_content, FallbackValue=is_checked_selected_content}"
+            <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center" Margin="235,0,0,0">
+                <RadioButton
                              VerticalAlignment="Center"
                              HorizontalAlignment="Left"
-                             Visibility="{Binding is_checked_on_view_visibility, FallbackValue=is_checked_on_view_visibility}"
+
+                             IsEnabled="{Binding is_already_enabled}"
                              IsChecked="{Binding is_checked_selected, FallbackValue=is_checked_selected}">
+                    <RadioButton.Content>
+                        <DockPanel>
+                            <TextBlock Text="По предварительно выбранным помещениям"/>
+                            <TextBlock Text="{Binding selected_rooms.Count, StringFormat={} ({0})}"/>
+                        </DockPanel>
+                    </RadioButton.Content>
                 </RadioButton>
                 <RadioButton Content="По выбранным помещениям"
                              VerticalAlignment="Center"
@@ -77,7 +152,7 @@
                              IsChecked="{Binding is_checked_on_view, FallbackValue=is_checked_on_view}">
                 </RadioButton>
             </StackPanel>
-            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10 0">
+            <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,20,0">
                 <TextBlock
                     Text="{Binding error_text, FallbackValue=ErrorText}"
                     Margin="5 0"
@@ -93,8 +168,6 @@
                     Click="ButtonOk_Click">
                 </Button>
             </StackPanel>
-
-
         </Grid>
     </Grid>
 </Window>
