--- a/АР.tab/РД.panel/Отделка.pulldown/Отделка пола.pushbutton/MainWindow.xaml
+++ b/АР.tab/РД.panel/Отделка.pulldown/Отделка пола.pushbutton/MainWindow.xaml
@@ -7,7 +7,7 @@
         Title="Отделка пола"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Height="360" Width="650"
+        Height="420" Width="650"
         ResizeMode="NoResize">
     <Window.Resources>
         <TextBlock x:Key="TextToolTip"
@@ -27,6 +27,7 @@
 
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="1*"/>
@@ -115,7 +116,18 @@
                         <StaticResource ResourceKey="TextToolTip"/>
                     </TextBlock.ToolTip>
                 </TextBlock>
-
+                <TextBlock Grid.Row="4" Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Margin="5 0 0 0 "
+                    Text="Смещение контура внутрь помещения:"
+                    TextWrapping="Wrap"/>
+                <TextBox
+                    Grid.ColumnSpan="2"
+                    Grid.Row ="4" Grid.Column="1"
+                    TextAlignment="Right"
+                    VerticalContentAlignment="Center"
+                    Margin="5 10"
+                    Text="{Binding offset_into_room, FallbackValue=offset_into_room, UpdateSourceTrigger=PropertyChanged}"/>
             </Grid>
         </GroupBox>
         <Grid Grid.Row="1" >
